# gmocoin-fx-mcp

./: .dockerignore  .env.template  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  server.json
.github/workflows/: release.yaml
docs/: mcp-registry-publication.md
src/: main.py
src/resources/asset_balance/: __init__.py  resource.py
src/tools/active_orders/: __init__.py  tool.py
src/tools/cancel_bulk_order/: __init__.py  tool.py
src/tools/cancel_orders/: __init__.py  tool.py
src/tools/change_ifd_order/: __init__.py  tool.py
src/tools/change_ifdoco_order/: __init__.py  tool.py
src/tools/change_oco_order/: __init__.py  tool.py
src/tools/change_order/: __init__.py  tool.py
src/tools/close_order/: __init__.py  tool.py
src/tools/ifd_order/: __init__.py  tool.py
src/tools/ifdoco_order/: __init__.py  tool.py
src/tools/kline/: __init__.py  tool.py
src/tools/latest_executions/: __init__.py  tool.py
src/tools/open_positions/: __init__.py  tool.py
src/tools/order/: __init__.py  tool.py
src/utils/: client_order_id.py
tests/: conftest.py  test_main.py
tests/resources/asset_balance/: test_asset_balance_resource.py
tests/tools/active_orders/: test_active_orders_tool.py
tests/tools/cancel_bulk_order/: test_cancel_bulk_order_tool.py
tests/tools/cancel_orders/: test_cancel_orders_tool.py
tests/tools/change_ifd_order/: test_change_ifd_order_tool.py
tests/tools/change_order/: test_change_order_tool.py
tests/tools/close_order/: test_close_order_tool.py
tests/tools/ifd_order/: test_ifd_order_tool.py
(+5 files in other folders)
