[project]
name = "gmocoin-fx-mcp"
version = "1.0.0"
description = "GMOコインFXのMCPサーバ"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
    "gmo-fx>=0.14.0",
    "python-dotenv>=1.2.2",
]

[project.urls]
Repository = "https://github.com/RikitoNoto/gmocoin-fx-mcp"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
